[package]
name = "ura-factory"
version = "1.0.0"
authors = ["Ura"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "artifacts/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = "1.1"
ura = { path = "../../packages/ura", default-features = false }
cw-storage-plus = "0.15"
cw2 = "0.15"
thiserror = "1.0"
itertools = "0.10"
cosmwasm-schema = "1.1"
cw-utils = "1.0.1"

[dev-dependencies]
cw-multi-test = "0.15"
ura-token = { path = "../token" }
ura-pair = { path = "../pair" }
cw20 = "0.15"
anyhow = "1.0"
prost = "0.11.5"
