[package]
name = "ura-xp-token"
version = "1.0.0"
authors = ["Ura"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
ura = { path = "../../packages/ura", default-features = false }
cw2 = "0.15"
cw20 = "0.15"
cw20-base = { version = "0.15", features = ["library"] }
cosmwasm-std = { version = "1.1" }
snafu = { version = "0.6" }
cosmwasm-schema = { version = "1.1" }
cw-storage-plus = "0.15"
